# ge-test

./: Dockerfile  README.md  compose.yaml  pyproject.toml
app/: main.py  models.py  repository.py
app/api/: deps.py  main.py
app/api/routes/: chat.py  cities.py  users.py
app/chat/: chat.py  prompts.py
app/core/: auth.py  config.py  db.py
app/weather/: city.py  exceptions.py  scraper.py
scripts/: init-db.py  onboard_script.sh  test.sh
tests/: conftest.py
tests/app/api/routes/: test_users.py
tests/app/chat/: test_chat.py
tests/app/weather/: test_city.py
